Split Input positive/negative and correct/incorrect

--- a/assg-01-perceptron-learning-tasks.ipynb
+++ b/assg-01-perceptron-learning-tasks.ipynb
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 36,
    "metadata": {
     "collapsed": false
    },
@@ -272,7 +272,8 @@
       " [ 1.         -0.02       -0.92358804]\n",
       " [ 1.          0.36285714 -0.31893688]\n",
       " [ 1.          0.88857143 -0.87043189]]\n",
-      "(4L, 3L)\n"
+      "(4L, 3L)\n",
+      "[ 0.  0.  0.  0.  1.  1.  1.  1.]\n"
      ]
     }
    ],
@@ -306,7 +307,8 @@
     "X_neg, X_pos = split_inputs_by_category(X, y)\n",
     "print X_neg\n",
     "print X_pos\n",
-    "print X_pos.shape\n"
+    "print X_pos.shape\n",
+    "print y "
    ]
   },
   {
@@ -347,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
@@ -385,8 +387,8 @@
     "    \"\"\"\n",
     "    # Implement your solution here\n",
     "    \n",
-    "    s = np.dot(X,theta) \n",
-    "    return s.flatten()\n",
+    "    s = np.dot(X,theta).flatten()\n",
+    "    return s\n",
     "  \n",
     "\n",
     "theta = np.array([[ 0.77187205],\n",
@@ -431,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -469,8 +471,8 @@
     "    \"\"\"\n",
     "    # implement you solution here\n",
     "    s = np.dot(X,theta)\n",
-    "    d = np.where(s >=0, 1.0, 0) \n",
-    "    return d.flatten() # return the calculated hypothesized categories as a (m,) shaped flattened vector\n",
+    "    d = np.where(s >=0, 1.0, 0).flatten() \n",
+    "    return d # return the calculated hypothesized categories as a (m,) shaped flattened vector\n",
     "\n",
     "\n",
     "theta = np.array([[ 0.77187205],\n",
@@ -533,11 +535,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Negative examples we got correct:\n",
+      "[]\n",
+      "\n",
+      "Negative examples incorrect:\n",
+      "[[ 1.         -0.80857143  0.8372093 ]\n",
+      " [ 1.          0.35714286  0.85049834]\n",
+      " [ 1.         -0.75142857 -0.73089701]\n",
+      " [ 1.         -0.3         0.12624585]]\n",
+      "\n",
+      "Positive examples correct:\n",
+      "[[ 1.          0.87142857  0.62458472]\n",
+      " [ 1.         -0.02       -0.92358804]\n",
+      " [ 1.          0.36285714 -0.31893688]]\n",
+      "\n",
+      "Positive examples incorrect:\n",
+      "[[ 1.          0.88857143 -0.87043189]]\n"
+     ]
+    }
+   ],
    "source": [
     "def calc_correct_incorrect_by_category(theta, X, y):\n",
     "    \"\"\"Given a set of theta weights for our perceptron and the inputs X plus the correct outputs y, split\n",
@@ -563,7 +588,11 @@
     "       the inputs in the positive category that were correct and incorrect respectively.\n",
     "    \"\"\"\n",
     "    # implement you solution here\n",
-    "    return # make sure you return the 4 separated results\n",
+    "    X_neg, X_pos = split_inputs_by_category(X, y)\n",
+    "    X_neg_correct,X_neg_incorrect = split_inputs_by_category(X_neg, hypothesis[:4])\n",
+    "    X_pos_incorrect,X_pos_correct = split_inputs_by_category(X_pos, hypothesis[4:])\n",
+    "    \n",
+    "    return X_neg_correct, X_neg_incorrect, X_pos_correct, X_pos_incorrect # make sure you return the 4 separated results\n",
     "\n",
     "\n",
     "X_neg_correct, X_neg_incorrect, X_pos_correct, X_pos_incorrect = calc_correct_incorrect_by_category(theta, X, y)\n",
